--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,74 @@ body {
   background: #000;
   color: #fff;
 }
+
+
+.github {
+  position: fixed;
+  display: block;
+  bottom: 0;
+  left: -140px;
+  right: 0;
+  height: 40px;
+  background-color: #24292e;
+  width: 130px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10px;
+  border-radius: 0 10px 0 0;
+  text-decoration: none;
+  transition: left .3s, width .2s;
+}
+
+.github:hover {
+  width: 140px;
+}
+
+.github:hover .arrow {
+  opacity: 1;
+  left: 15px;
+}
+
+
+.github span {
+  color: #fff;
+  margin: auto 10px;
+}
+
+.github svg {
+  margin: auto 0;
+}
+
+.github svg path {
+  fill: #fff;
+}
+
+.github .arrow {
+  position: absolute;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity .3s, left .2s;
+}
+
+.github .arrow::after, .github .arrow::before {
+  content: '';
+  display: block;
+  width: 50%;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+}
+
+.github .arrow::after {
+  transform: rotate(45deg);
+  top: 4px;
+}
+
+.github .arrow::before {
+  transform: rotate(-45deg);
+  bottom: 4px;
+}
